re PR c++/55250 ([C++0x] enum declarations within constexpr function are allowed, constexpr declarations are not)

/cp
2014-10-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/55250
	* semantics.c (check_constexpr_bind_expr_vars): New.
	(check_constexpr_ctor_body, massage_constexpr_body): Use it.
	(build_constexpr_constructor_member_initializers): Handle
	BIND_EXPR in the main conditional.

/testsuite
2014-10-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/55250
	* g++.dg/cpp0x/constexpr-type-decl1.C: New.
	* g++.dg/cpp0x/constexpr-type-def1.C: Likewise.
	* g++.dg/cpp1y/constexpr-type-def1.C: Likewise.

From-SVN: r215954